[package]
name = "vorago-reb1"
version = "0.1.0"
authors = ["Robin Mueller <robin.mueller.m@gmail.com>"]
edition = "2018"
description = "Board Support Crate for the Vorago REB1 development board"
homepage = "https://github.com/robamu/vorago-reb1-rs"
repository = "https://github.com/robamu/vorago-reb1-rs"
license = "MIT OR Apache-2.0"
keywords = ["no-std", "reb1", "cortex-m", "vorago", "va108xx"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
panic-halt = "0.2"

[dependencies.va108xx]
path = "../va108xx-rs"
version = "0.1.0"
features = ["rt"]
